[feat] REST API > 게시글 권한체크 및 파일/섬네일 항목 추가
- OptionalAccessTokenAuthMiddleware 추가 (인증정보가 없는 경우)
- BoardPermission 추가 (게시글 권한 체크)
- GroupService 추가 (그룹 관련 서비스)
